--- a/cicd-template.yaml
+++ b/cicd-template.yaml
@@ -53,7 +53,7 @@ objects:
     labels:
       app: cicd-pipeline
       name: cicd-pipeline
-    name: tasks-pipeline
+    name: samplejava-pipeline
   spec:
     triggers:
       - type: GitHub
